chore(format): update formatting

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,9 +1,22 @@
-./vscode
+# Ignore artifacts
+build/
+dist/
+*.log
 
-*.env
+# Ignore node_modules
+node_modules/
+
+# Ignore configuration files
+*.config.js
+*.config.ts
+
+# Ignore local environment files
 .env
-.env.*
+*.local
 
-/node_modules
-/dist
-./dist
+# Ignore test coverage files
+coverage/
+
+# Ignore IDE-specific files
+.vscode/
+.idea/
