--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "singleQuote": true,
-  "bracketSpacing": false,
-  "tabWidth": 4,
-  "semi": false,
-  "trailingComma": "none"
+    "singleQuote": true,
+    "bracketSpacing": true,
+    "tabWidth": 4,
+    "semi": false,
+    "trailingComma": "none"
 }
