--- a/package.json
+++ b/package.json
@@ -1,46 +1,46 @@
 {
-  "name": "chai-aur-backend-prodn-grade",
-  "version": "1.0.0",
-  "description": "Production grade backend application",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "dev": "nodemon -r dotenv/config --exec ts-node src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
-  },
-  "keywords": [
-    "javascript",
-    "backend",
-    "production"
-  ],
-  "author": "Prayag Bhatt",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/mongoose": "^5.11.97",
-    "@types/multer": "^1.4.11",
-    "@types/node": "^22.4.1",
-    "nodemon": "^3.0.2",
-    "prettier": "^3.1.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
-  },
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cloudinary": "^1.41.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
-    "mongoose-aggregate-paginate-v2": "^1.0.6",
-    "multer": "^1.4.5-lts.1",
-    "winston": "^3.14.2"
-  }
+    "name": "chai-aur-backend-prodn-grade",
+    "version": "1.0.0",
+    "description": "Production grade backend application",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "dev": "nodemon",
+        "build": "tsc",
+        "start": "node dist/index.js"
+    },
+    "keywords": [
+        "javascript",
+        "backend",
+        "production"
+    ],
+    "author": "Prayag Bhatt",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
+        "@types/cookie-parser": "^1.4.7",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.6",
+        "@types/mongoose": "^5.11.97",
+        "@types/multer": "^1.4.11",
+        "@types/node": "^22.4.1",
+        "nodemon": "^3.1.4",
+        "prettier": "^3.1.1",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.5.4"
+    },
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "cloudinary": "^1.41.0",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.0.3",
+        "mongoose-aggregate-paginate-v2": "^1.0.6",
+        "multer": "^1.4.5-lts.1",
+        "winston": "^3.14.2"
+    }
 }
