--- a/package.json
+++ b/package.json
@@ -30,12 +30,17 @@
         "@types/cookie-parser": "^1.4.7",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/jest": "^29.5.12",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/mongoose": "^5.11.97",
         "@types/multer": "^1.4.11",
         "@types/node": "^22.4.1",
+        "@types/supertest": "^6.0.2",
+        "jest": "^29.7.0",
         "nodemon": "^3.1.4",
         "prettier": "^3.1.1",
+        "supertest": "^7.0.0",
+        "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.4"
     },
